--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@ current: index
           <small class="lh-lg">4 hrs ago</small>
         </div>
         <div class="d-flex w-100 justify-content-between">
-          <h4 class="list-content">Please check this file for me, thanks!</h4>
+          <h4 class="list-title">Please check this file for me, thanks!</h4>
           <small class="text-muted lh-lg">Emily Wang</small>
         </div>
       </button>
@@ -66,7 +66,7 @@ current: index
           <small class="lh-lg">12 hrs ago</small>
         </div>
         <div class="d-flex w-100 justify-content-between">
-          <h4 class="list-content">My Homework</h4>
+          <h4 class="list-title">My Homework</h4>
           <small class="text-muted lh-lg">David Xu</small>
         </div>
       </button>
@@ -80,7 +80,7 @@ current: index
           <small class="lh-lg">18 hrs ago</small>
         </div>
         <div class="d-flex w-100 justify-content-between">
-          <h4 class="list-content">Have a problem with this page.</h4>
+          <h4 class="list-title">Have a problem with this page.</h4>
           <small class="text-muted lh-lg">Tony Wei</small>
         </div>
       </button>
@@ -94,7 +94,7 @@ current: index
           <small class="lh-lg">19 hrs ago</small>
         </div>
         <div class="d-flex w-100 justify-content-between">
-          <h4 class="list-content">Did I do it right?</h4>
+          <h4 class="list-title">Did I do it right?</h4>
           <small class="text-muted lh-lg">Christina Lin</small>
         </div>
       </button>
